# mcp-arxiv-demo

./: .env.example  README.md  check_server.py  main.py  mcp_client.py  mcp_client_adding_prompt_resource_features.py  mcp_client_ref_servers.py  mcp_server.py  pyproject.toml  requirements.txt  server_config.json  start_server.sh
papers/llm/: papers_info_tien.json
papers/math/: papers_info_tien.json
